--- a/proj1_code/DCM--walking-Atlas.ipynb
+++ b/proj1_code/DCM--walking-Atlas.ipynb
@@ -500,10 +500,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\maxim\\AppData\\Local\\Temp/ipykernel_16256/3922703801.py:28: DeprecationWarning: an integer is required (got type numpy.float64).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
+      "C:\\Users\\bapti\\AppData\\Local\\Temp/ipykernel_19008/944109246.py:28: DeprecationWarning: an integer is required (got type numpy.float64).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
       "  pybullet.setJointMotorControlArray(bodyIndex=robotID,\n",
-      "C:\\Users\\maxim\\AppData\\Local\\Temp/ipykernel_16256/3922703801.py:42: DeprecationWarning: an integer is required (got type numpy.float64).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
+      "C:\\Users\\bapti\\AppData\\Local\\Temp/ipykernel_19008/944109246.py:46: DeprecationWarning: an integer is required (got type numpy.float64).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
       "  pybullet.setJointMotorControlArray(bodyIndex=robotID,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total power :\n",
+      "5.4317506441103856\n",
+      "160.83774005667982\n",
+      "83.13474535039504\n",
+      "CoT\n",
+      "0.013180710213030598\n",
+      "0.39028957363948497\n",
+      "0.20173514192625763\n"
      ]
     }
    ],
@@ -543,6 +557,10 @@
     "    time.sleep(0.0002)\n",
     "    \n",
     "time.sleep(1)#Just wait for a second\n",
+    "j = 0\n",
+    "power = 0\n",
+    "abspower = 0\n",
+    "zeropower = 0\n",
     "\n",
     "#Solving the inverse kinematic and sending the joints position command to the robot\n",
     "for i in range(int((DCMPlanner.numberOfSamplesPerSecond) * CoPPositions.shape[0] * DCMPlanner.stepDuration)):\n",
@@ -562,7 +580,40 @@
     "        pybullet.addUserDebugLine(leftFootTrajectory[i-14],leftFootTrajectory[i],[1.0,0.0,0.8],4,140)\n",
     "        pybullet.addUserDebugLine(rightFootTrajectory[i-14],rightFootTrajectory[i],[0.1,0.9,0.8],4,140)\n",
     "    pybullet.stepSimulation()\n",
-    "\n"
+    "    \n",
+    "    current_motor_torques = np.array([x[3] for x in pybullet.getJointStates(bodyUniqueId=robotID, jointIndices=jointsIndex)])\n",
+    "    current_motor_velocities = np.array([x[1] for x in pybullet.getJointStates(bodyUniqueId=robotID, jointIndices=jointsIndex)])\n",
+    "    instantaneous_motor_power = current_motor_torques*current_motor_velocities\n",
+    "    \n",
+    "    power += sum(instantaneous_motor_power)\n",
+    "    abspower += sum(abs(instantaneous_motor_power))\n",
+    "    for n in range(len(instantaneous_motor_power)):\n",
+    "        if(instantaneous_motor_power[n] > 0):\n",
+    "            zeropower += instantaneous_motor_power[n]\n",
+    "        \n",
+    "    j += 1\n",
+    "    #if(j > 300):\n",
+    "        #j = 0;\n",
+    "        #print(\"motor power\")\n",
+    "        #print(instantaneous_motor_power)\n",
+    "        #print(\"motor velocities\")\n",
+    "        #print(current_motor_velocities)\n",
+    "        #print(\"motor torques\")\n",
+    "        #print(current_motor_torques)\n",
+    "        #print(\" \")\n",
+    "\n",
+    "power = power/j\n",
+    "abspower = abspower/j\n",
+    "zeropower = zeropower/j\n",
+    "print(\"total power :\")\n",
+    "print(power)\n",
+    "print(abspower)\n",
+    "print(zeropower)\n",
+    "\n",
+    "print(\"CoT\")\n",
+    "print(power/(89*9.81*0.472))\n",
+    "print(abspower/(89*9.81*0.472))\n",
+    "print(zeropower/(89*9.81*0.472))"
    ]
   },
   {
@@ -613,10 +664,10 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_16256/2007240339.py, line 1)",
+     "evalue": "invalid syntax (Temp/ipykernel_19008/2007240339.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\maxim\\AppData\\Local\\Temp/ipykernel_16256/2007240339.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    The height of the center of mass Z_c is the only physical parameter that will affect the DMC. One can understand it easily\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\bapti\\AppData\\Local\\Temp/ipykernel_19008/2007240339.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    The height of the center of mass Z_c is the only physical parameter that will affect the DMC. One can understand it easily\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
